CS 536/pr5/tests/errors/rvalue_and_type_mismatch.minc
int main(){
	bool this = 5++;
}
